# ghostlink

./: .gitignore  AGENT_PLAYBOOK.md  AUDIT.md  BACKEND_DEEP_AUDIT.md  BUGS.md  CHANGELOG.md  CLAUDE_AUDIT.md  DESKTOP_APP_PLAN.md  FEATURES.md  FRONTEND_AUDIT.md  GAB_BACKEND_AUDIT.md  GAF_ROADMAP.md  LICENSE  README.md  ROADMAP.md  STATUS.md  UNIFIED_ROADMAP.md  UNIFIED_ROADMAP_V2.md  XPLAIN.md  roadmap-pt1.md  roadmap-pt2.md  start.sh  start_agent.sh  start_claude.sh  start_codex.sh
.claude/: launch.json
.github/workflows/: build.yml
backend/: a2a.py  a2a_bridge.py  agent_memory.py  agents_md.py  app.py  app_helpers.py  arena.py  audit_store.py  auth.py  autonomous.py  bg_executor.py  bridges.py  checkpoints.py  cli.py  code_review.py  collab.py  config.toml  config_test.toml  cost.py  deps.py  document_parser.py  evals.py  ghostlink_mcp_server.py  ghostlink_server.py  identity_inject.py  jobs.py  mcp-config-example.json  mcp_bridge.py  mcp_proxy.py  memory_graph.py  migrations.py  observer.py  plans.py  plugin_loader.py  plugin_sdk.py  policy.py  profiles.py  providers.py  pyproject.toml  rag.py  (+20 more)
backend/plugins/: auto_commit.py  auto_lint.py  file_watcher.py  skill_marketplace.py
backend/routes/: a2a.py  agents.py  audit.py  bridges.py  channels.py  evals.py  introspect.py  jobs.py  messages.py  misc.py  phase4_7.py  plugins.py  providers.py  review.py  rules.py  schedules.py  search.py  security.py  sessions.py  tasks.py
backend/tests/: conftest.py  test_agent_arg_validation.py  test_arena_collab.py  test_bg_executor.py  test_branch_routes.py  test_bridges.py  test_checkpoint_routes.py  test_cli_doctor.py  test_core.py  test_heartbeat_auth.py  test_integration.py  test_introspect.py  test_message_routes.py  test_misc_routes.py  test_modules.py  test_ops_endpoints.py  test_phase1_routes.py  test_phase1a.py  test_phase1b.py  test_phase2.py  test_phase3.py  test_phase35.py  test_phase45.py  test_phase4a.py  test_phase4b.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase85.py  test_phase9.py  test_provider_routes.py  test_review_routes.py  test_search_routes.py
desktop/: .gitignore  electron-builder.yml  package-lock.json  package.json  tsconfig.json
desktop/assets/: uninstaller.nsh
desktop/main/: index.ts  launcher.ts  preload.ts  server.js  server.ts  settings.ts  tray.ts  updater.ts
desktop/renderer/: launcher.css  launcher.html  launcher.js  wizard.css  wizard.html  wizard.js
docs/: AI_AGENT_PLATFORM_SURVEY.md
docs/archive/: CODEBASE_AUDIT.md  CODEX_AUDIT.md  FeaturesRDM.md  GAB_ROADMAP.md  ROADMAP.md  V2.5_BUGFIX_ROADMAP.md
docs/research/: AGENT_CLI_VERIFICATION.md  MCP_TOOLS_VERIFICATION.md  PROVIDER_VERIFICATION.md
docs/specs/: AGENT_EFFICIENCY_SPEC.md  APPROACH_AUDIT.md  AUDIT_SUMMARY.md  COMPETITIVE_UPGRADES_2026-04-07.md  PHASE_1A_IMPL_PLAN.md  PHASE_1A_RISK_AUDIT.md  PHASE_1A_SPEC.md  PHASE_1B_2_SPEC.md  PHASE_3_3_5_SPEC.md  PHASE_4_SPEC.md  PHASE_5_6_SPEC.md  PRODUCTIZATION_GUARDRAILS.md  RAILWAY_OPTIONAL_STRATEGY.md  THREAT_MODEL.md  UX_CLEANUP_SPEC.md  (+1 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check_eval_gates.py
(+174 files in other folders)
