[project]
name = "ghostlink-backend"
version = "5.0.17"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["__pycache__", ".venv", "venv", "data", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without strict (Python 3.10+ only)
    "UP007", # use X | Y for unions (already used)
]

[tool.ruff.lint.isort]
known-first-party = ["deps", "store", "registry", "router", "mcp_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
