[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostlink-mcp"
version = "6.0.5"
description = "GhostLink MCP Server — multi-agent AI chat hub"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "aiosqlite==0.22.1",
    "python-multipart==0.0.24",
    "tomli==2.4.0",
    "websockets==16.0",
    "mcp==1.27.0",
    "cryptography==46.0.6",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[project.scripts]
ghostlink-mcp = "ghostlink_mcp_server:main"
ghostlink-server = "ghostlink_server:main"

[tool.setuptools]
packages = ["routes", "plugins"]
py-modules = [
    "a2a_bridge",
    "agent_memory",
    "app",
    "app_helpers",
    "auth",
    "automations",
    "autonomous",
    "branches",
    "bridges",
    "cli",
    "deps",
    "document_parser",
    "ghostlink_mcp_server",
    "ghostlink_server",
    "jobs",
    "mcp_bridge",
    "mcp_proxy",
    "memory_graph",
    "plugin_loader",
    "plugin_sdk",
    "providers",
    "rag",
    "registry",
    "remote_runner",
    "repo_map",
    "router",
    "rules",
    "sandbox",
    "schedules",
    "security",
    "sessions",
    "skills",
    "specialization",
    "store",
    "worktree",
    "wrapper",
    "wrapper_mcp",
    "wrapper_unix",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["__pycache__", ".venv", "venv", "data", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
]
ignore = [
    "E402",  # module import not at top — deps.py must load first to set sys.path
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without strict (Python 3.10+ only)
    "UP007", # use X | Y for unions (already used)
]

[tool.ruff.lint.isort]
known-first-party = ["deps", "store", "registry", "router", "mcp_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
